--- a/Enviro/UserSettings/Search.settings
+++ b/Enviro/UserSettings/Search.settings
@@ -11,9 +11,9 @@ scopes = {
 	"last_search.DE949528" = "palett"
 	"OpenInspectorPreview.DE949528" = "0"
 	"currentGroup.DE949528" = "menu"
-	"picker_window_position_offset.45F317DD" = "196;756;320;550"
-	"picker_search_text.45F317DD" = "st: sc"
-	"last_search.45F317DD" = "st: sc"
+	"picker_window_position_offset.45F317DD" = "-481;338;320;550"
+	"picker_search_text.45F317DD" = "st: paus"
+	"last_search.45F317DD" = "st: paus"
 	"OpenInspectorPreview.45F317DD" = "0"
 	"currentGroup.45F317DD" = "all"
 }
@@ -77,6 +77,7 @@ providers = {
 objectSelectors = {
 }
 recentSearches = [
+	"st: t"
 ]
 searchItemFavorites = [
 ]
