Other UI updates

--- a/Enviro/UserSettings/Search.settings
+++ b/Enviro/UserSettings/Search.settings
@@ -12,8 +12,8 @@ scopes = {
 	"OpenInspectorPreview.DE949528" = "0"
 	"currentGroup.DE949528" = "menu"
 	"picker_window_position_offset.45F317DD" = "-481;338;320;550"
-	"picker_search_text.45F317DD" = "st: paus"
-	"last_search.45F317DD" = "st: paus"
+	"picker_search_text.45F317DD" = "st: jum "
+	"last_search.45F317DD" = "st: jum "
 	"OpenInspectorPreview.45F317DD" = "0"
 	"currentGroup.45F317DD" = "all"
 }
